--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}{% trans %}Accueil{% endtrans %}{% endblock %}
 
 {% block body %}
     {% if app.user %}
         <div class="highlight-blue" style="padding-top: 8em;">
             <div class="container">
                 <div class="intro">
-                    <h2 class="text-center">Créer un salon</h2>
-                    <p class="text-center">Vous pouvez créer un salon en public pour jouer avec des inconnus ou un
-                        salon privée et inviter vos amis.</p>
+                    <h2 class="text-center">{% trans %}Créer un salon{% endtrans %}</h2>
+                    <p class="text-center">{% trans %}Vous pouvez créer un salon en public pour jouer avec des inconnus ou un
+                        salon privée et inviter vos amis.{% endtrans %}</p>
                 </div>
                 <div class="buttons">
-                    <a class="btn btn-primary" role="button" href="{{ path('createRoom', {access: 'public'}) }}">Public</a>
-                    <a class="btn btn-primary" role="button" href="{{ path('createRoom', {access: 'private'}) }}">Privée</a>
+                    <a class="btn btn-primary" role="button" href="{{ path('createRoom', {access: 'public'}) }}">{% trans %}Public{% endtrans %}</a>
+                    <a class="btn btn-primary" role="button" href="{{ path('createRoom', {access: 'private'}) }}">{% trans %}Privée{% endtrans %}</a>
                 </div>
             </div>
         </div>
@@ -22,11 +22,11 @@
         <section class="portfolio-block project-no-images">
             <div class="container">
                 <div class="heading">
-                    <h2><strong>Jouer dans un salon publique</strong></h2>
+                    <h2><strong>{% trans %}Jouer dans un salon public{% endtrans %}</strong></h2>
                 </div>
                 {% if rooms is empty %}
                     <div class="heading">
-                        <h6>Aucun salon publique n'est ouvert pour le moment</h6>
+                        <h6>{% trans %}Aucun salon publique n'est ouvert pour le moment{% endtrans %}</h6>
                     </div>
                 {% else %}
                     <div class="row">
