--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -65,9 +65,9 @@
                 </div>
 
                 <div id="replay-game" class="row w-100 justify-content-center" hidden>
-                    <form id="restart-form" action="{{ path('restart') }}" method="post">
+{#                    <form id="restart-form" action="{{ path('restart') }}" method="post">#}
                         <button id='restart-btn' class="btn btn-primary btn-lg">Recommencer</button>
-                    </form>
+{#                    </form>#}
                 </div>
 
                 <div id="answerDiv" class="card shadow mt-auto mb-4 w-100" hidden>
