--- a/templates/question/modifyQuestion.html.twig
+++ b/templates/question/modifyQuestion.html.twig
@@ -8,28 +8,44 @@
     <main class="page contact-page">
         <section class="portfolio-block contact">
             <div class="container">
-                <div class="heading">
-                    <h2>Modifier une question</h2>
+
+                {{ form_start(form, { attr: {novalidate: 'novalidate'} }) }}
+                <div class="form-group text-center">
+                    <div class="heading">
+                        <h2>Modifier une question</h2>
+                    </div>
                 </div>
-                {{ form_start(form) }}
+                {{ form_label(form.subCategory, 'Catégorie'|trans) }}
+                {{ form_row(form.subCategory, {'label':false}) }}
+                {% if boolean == false %}
+                    {{ form_label(form.linkPicture, 'Image'|trans) }}
+                    {{ form_row(form.linkPicture, {'label':false}) }}
+                {% else %}
+                    {{ form_label(form.text, 'Question'|trans) }}
+                    {{ form_row(form.text, {'label':false}) }}
+                {% endif %}
+                {{ form_label(form.answers, 'Réponses'|trans) }}
+                <div id="guessTheAnswersDiv"
+                     data-prototype="{{ form_widget(form.answers.vars.prototype)|e('html_attr') }}">
+                    {% set i = 0 %}
+                    {% for answer  in question.answers %}
+                        <div class="mb-2">
+                            {{ form_row(form.answers[i]) }}
+                        </div>
+                        {% set i = i+1 %}
+                    {% endfor %}
+                </div>
                 <div class="form-group">
-                    {{ form_row(form.status,{'label':'Statut :', 'attr':{'class':'form-control '}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_row(form.text,{'label': 'Text :', 'attr':{'class':'form-control '}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_row(form.player,{'label':'Joueur :', 'attr':{'class':'form-control  '}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_row(form.subCategory,{'label':'Sous catégorie :', 'attr':{'class':'form-control'  }}) }}
-                </div>
-                <br>
-                <div class="form-group"
-                    ><button class="btn btn-primary btn-block" type="submit">Enregistrez vos modifications de la question</button>
+                    {{ form_row(form.Envoyer) }}
                 </div>
                 {{ form_end(form) }}
+            </div>
         </section>
     </main>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('suggestQuestion') }}
 {% endblock %}
