Change server smtp, add some translations,edit entity player back office

--- a/templates/global/account.html.twig
+++ b/templates/global/account.html.twig
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col"><strong class="float-right">Pseudo</strong></div>
+                    <div class="col"><strong class="float-right">{% trans %}Pseudo{% endtrans %}</strong></div>
                     <div class="col">
                         <p>{{player.pseudo}}</p>
                     </div>
