--- a/templates/room_settings/listProfil.html.twig
+++ b/templates/room_settings/listProfil.html.twig
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">{{ room_setting.nameProfil }}</h4>
-            <p class="card-text">joueurs : {{ room_setting.nbMaxPlayer }}<br>tours
+            <p class="card-text">{% trans %}joueurs{% endtrans %} : {{ room_setting.nbMaxPlayer }}<br>{% trans %}tours{% endtrans %}
                 : {{ room_setting.numberRound }}</p>
             <ul style="margin-bottom: 2em;">
                 {% for game in games %}
@@ -23,26 +23,26 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Êtes vous sûr de vouloir supprimer ?</h4>
+                            <h4 class="modal-title">{% trans %}Êtes vous sûr de vouloir supprimer ?{% endtrans %}</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                                         aria-hidden="true">×</span></button>
                         </div>
                         <div class="modal-footer">
-                            <button class="btn btn-light" type="button" data-dismiss="modal">Non</button>
+                            <button class="btn btn-light" type="button" data-dismiss="modal">{% trans %}Non{% endtrans %}</button>
                             <a href="{{ path('room_settings_delete', {'id': room_setting.id}) }}"
-                               class="btn btn-primary btn-danger" role="button">Oui</a>
+                               class="btn btn-primary btn-danger" role="button">{% trans %}Oui{% endtrans %}</a>
                         </div>
                     </div>
                 </div>
             </div>
             <button class="btn btn-primary btn-danger" type="button"
                     style="margin-right: 0.25em;margin-bottom: 4px;" data-toggle="modal"
-                    data-target="#modalSupSettings{{ room_setting.id }}">Supprimer
+                    data-target="#modalSupSettings{{ room_setting.id }}">{% trans %}Supprimer{% endtrans %}
             </button>
             <div class="modal fade" role="dialog" tabindex="-1"
                  id="modalEditSettings{{ room_setting.id }}">
             </div>
-            <a href="{{ path('room_settings_edit', {'id': room_setting.id}) }}" class="btn btn-primary" role="button">Modifier</a>
+            <a href="{{ path('room_settings_edit', {'id': room_setting.id}) }}" class="btn btn-primary" role="button">{% trans %}Modifier{% endtrans %}</a>
         </div>
     </div>
 </div>
