--- a/templates/room_settings/new.html.twig
+++ b/templates/room_settings/new.html.twig
@@ -7,7 +7,7 @@
         <section class="portfolio-block project">
             <div class="container">
                 <div class="heading">
-                    <h2>Edition des paramètres</h2>
+                    <h2>{% trans %}Edition des paramètres{% endtrans %}</h2>
                 </div>
                 {{ include('room_settings/_form.html.twig') }}
             </div>
