--- a/templates/room_settings/edit.html.twig
+++ b/templates/room_settings/edit.html.twig
@@ -7,9 +7,9 @@
         <section class="portfolio-block project">
             <div class="container">
                 <div class="heading">
-                    <h2>Modification des paramètres</h2>
+                    <h2>{% trans %}Modification des paramètres{% endtrans %}</h2>
                 </div>
-                {{ include('room_settings/_form.html.twig', {form:form,button:'Sauvegarder' })}}
+                {{ include('room_settings/_form.html.twig', {form:form,button:'Sauvegarder'|trans })}}
 
                 {# {{ include('room_settings/_delete_form.html.twig') }} #}
             </div>
