--- a/templates/room_settings/index.html.twig
+++ b/templates/room_settings/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}RoomSettings index{% endblock %}
 
 {% block body %}
-    <h1>Mes Paramètres de salon enregistrés</h1>
+    <h1>{% trans %}Mes Paramètres de salon enregistrés{% endtrans %}</h1>
     <div class="container">
         <div class="row">
             {% for room_setting in room_settings %}
